--- a/css/main.css
+++ b/css/main.css
@@ -1421,7 +1421,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #0ff;
+    background: #7cff13;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
