--- a/css/main.css
+++ b/css/main.css
@@ -1421,7 +1421,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #67afdf;
+    background: #ff41b6;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
