--- a/css/main.css
+++ b/css/main.css
@@ -1412,7 +1412,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #ff6a18;
+    background: #ff148f;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
