--- a/css/main.css
+++ b/css/main.css
@@ -1420,7 +1420,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #99b593;
+    background: #7d2b8c;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
